--- a/scss/style.scss
+++ b/scss/style.scss
@@ -184,6 +184,44 @@ article{
     background-size: cover;
     background-repeat: none;
     background-position: bottom;
+    .media{
+        display: flex;
+        width: 100%;
+        div{
+            width: 50px;
+            height: 50px;
+            margin: 20px;
+            border-radius: 10px;
+            transition: all 0.3s ease-in-out;
+            &:hover{
+                transform: scale(1.5);
+                box-shadow: -10px 10px 4px 2px rgba(18, 21, 45, 1);
+            }
+            i{
+                font-size: 40px;
+               
+               
+            }
+            a{
+                display: block;
+                color: white; 
+                text-align: center;
+                justify-items: center;
+                margin: auto;
+
+            }
+        }
+        .fb{
+            background: #385898;
+        }
+        .yt{
+            background: #c00;
+        }
+        .disc{
+            background: #5865f2;
+        }
+
+    }
 }
 
 // ***********stopka*********************
